Add alpha value to interpolation logic

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	</head>
 	<body>
 		<script src="js/libraries/three.min.js"></script>
+		<script src="js/solid.js"></script>
+		<script src="js/cube.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
